# xiaozhu

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  ONBOARDING.md  README.md  TECH_DESIGN.md  docker-compose.yml  package.json
server/: .env.example  .gitignore  pyproject.toml  vibuild.db  vibuild.db.bak
server/alembic/: env.py
server/alembic/versions/: 122ab191c2b1_llm_models_删除name列_展示名改用id.py  2b695bf2f420_新增_email_codes_表_注册邮箱验证码.py  3f6b92c1d8a4_llm_models_add_detected_capabilities.py  4b247f0ab0a1_管理后台_users加is_admin_app_settings_llm_.py  5ca68a943576_messages_增加_images_列.py  70cb1ea464f2_orders_删除_payment_method_字段_爱发电为唯一支付.py  7b9d371d4a69_boot_failures_预览启动失败监控表.py  7c351e04586f_orders_表_users_tier_expires_at_付费第5步_支付.py  824ed8891c69_users_加_tier_daily_used_daily_date_三列_.py  8e7b4f1c2d90_llm_models_add_provider.py  a067a62e445d_init_schema.py  c44aa7c8c5b7_orders_加_payment_method_字段.py  c932b392335c_boot_failures_增加_cold_prewarm_字段_.py  c941581b6eaa_模型表改单表_去分组_每模型自带base_url_api_key_logo.py  ef94893b30e5_orders_审核字段_移除爱发电配置.py
server/app/: admin.py  afdian.py  alipay.py  ask_store.py  billing.py  build_store.py  checkpointer.py  config.py  db.py  deps.py  email.py  llm.py  log_store.py  main.py  mock_profile.py  model_providers.py  runtime_config.py  security.py  setup.py  templates.py  versioning.py
server/app/agents/: graph.py  loop.py  (+3 more)
server/keys/: README.md
server/scripts/: check_alipay.py  check_token_usage.py  check_vision.py  make_admin.py
server/tests/: test_model_capabilities.py  test_reasoning_stream.py  test_retry_checkpoint.py
(+212 files in other folders)
