[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.0.0",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "langchain-openai>=1.2.2",
    "bcrypt>=5.0.0",
    "pyjwt>=2.13.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
